Refactor FEN parsing and optimize move collection.
Enhanced FEN parsing to use precise token intervals for accuracy. Replaced manual move collection with a streamlined stream-based approach for improved readability and efficiency. Updated tests to reflect changes while maintaining behavior consistency.